[package]
name = "registrar"
version = "0.1.0"
authors = ["sam"]
edition = "2018"

[dependencies]
ink_metadata = { version = "2.1.0", git = "https://github.com/paritytech/ink", package = "ink_metadata", default-features = false, features = ["derive"], optional = true }
ink_primitives = { version = "2.1.0", git = "https://github.com/paritytech/ink", package = "ink_primitives", default-features = false }
ink_core = { version = "2.1.0", git = "https://github.com/paritytech/ink", package = "ink_core", default-features = false }
ink_lang = { version = "2.1.0", git = "https://github.com/paritytech/ink", package = "ink_lang", default-features = false }

scale = { package = "parity-scale-codec", version = "1.3", default-features = false, features = ["derive"] }
scale-info = { version = "0.3", default-features = false, features = ["derive"], optional = true }

[dependencies.type-metadata]
git = "https://github.com/type-metadata/type-metadata.git"
rev = "02eae9f35c40c943b56af5b60616219f2b72b47d"
default-features = false
features = ["derive"]
optional = true

[lib]
name = "registrar"
path = "lib.rs"
crate-type = [
	# Used forcar normal contract Wasm blobs.
	"cdylib",
	# Required for ABI generation, and using this contract as a dependency.
	# If using `cargo contract build`, it will be automatically disabled to produce a smaller Wasm binary
	"rlib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_core/std",
    "ink_primitives/std",
    "scale/std",
    "type-metadata/std",
    "scale-info",
    "scale-info/std",
]
test-env = [
    "std",
]

ink-generate-abi = [
    "std",
    "ink_metadata",
    "type-metadata",
]
ink-as-dependency = []

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
overflow-checks = true

[workspace]
members = [
	".ink/abi_gen",
]

exclude = [
	".ink"
]
